basic gui support

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,9 @@
         "browser": true,
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "mocha": true,
+        "jquery": true
     },
     "parserOptions": {
         "ecmaFeatures": {
@@ -20,5 +22,8 @@
         "constructor-super": "warn",
         "semi": "warn",
         "valid-typeof": "warn"
+    },
+    "globals": {
+        "io": true
     }
 }
